--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         $('#main_content').headsmart()
       })
     </script>
-    <title>Latex-project-report-template by k4rtik</title>
+    <title>LaTeX Project Report Template by k4rtik</title>
   </head>
 
   <body>
