Remove hyphenation from heading

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <header>
         <span class="ribbon-outer">
           <span class="ribbon-inner">
-            <h1>Latex-project-report-template</h1>
+            <h1>LaTeX Project Report Template</h1>
             <h2>LaTeX based template for college project reports</h2>
           </span>
           <span class="left-tail"></span>
