--- a/index.html
+++ b/index.html
@@ -53,9 +53,6 @@
 <p>Abstracted from a Major Project Report at CSED, NIT Calicut but can be
 modified easily to use for other reports also.</p>
 
-<p>Released under Creative Commons Attribution license (CC-BY)
-Info: <a href="http://creativecommons.org/licenses/by/3.0/">http://creativecommons.org/licenses/by/3.0/</a></p>
-
 <h3>Created by</h3>
 
 <p><a href="http://people.cse.nitc.ac.in/kartik" title="Kartik's Academic Profile">Kartik Singhal</a><br>
@@ -90,6 +87,10 @@ A good resource to start with is <a href="http://en.wikibooks.org/wiki/LaTeX/">h
 
 <p>NITC logo: Mr Chandramohan MK, Graphic Studio, Central Library, NIT Calicut<br>
 Hacker logo: <a href="http://www.catb.org/hacker-emblem/">http://www.catb.org/hacker-emblem/</a></p>
+
+<h1>License</h1>
+
+<p><a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/80x15.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">LaTeX Template for Project Report</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="https://k4rtik.github.io/latex-project-report-template/" property="cc:attributionName" rel="cc:attributionURL">Kartik Singhal</a> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.</p>
       </section>
 
       <footer>
