Bigger logo, center align license

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ Hacker logo: <a href="http://www.catb.org/hacker-emblem/">http://www.catb.org/ha
 
 <h1>License</h1>
 
-<p><a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/80x15.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">LaTeX Template for Project Report</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="https://k4rtik.github.io/latex-project-report-template/" property="cc:attributionName" rel="cc:attributionURL">Kartik Singhal</a> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.</p>
+<p style="text-align: center;"><a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">LaTeX Template for Project Report</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="https://k4rtik.github.io/latex-project-report-template/" property="cc:attributionName" rel="cc:attributionURL">Kartik Singhal</a> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.</p>
       </section>
 
       <footer>
